IBX-429: hide scrollbars while splitting...stops weird resizing issues

--- a/src/main/resources/META-INF/resources/ibx/resources/css/splitter.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/splitter.ibx.css
@@ -43,3 +43,7 @@
 	cursor:ns-resize;
 }
 
+.ibx-splitter-sizing
+{
+	overflow:hidden !important;
+}
